# poetry-lock-file-repro

proj1/: pyproject.toml
proj2/: pyproject.toml
proj3/: pyproject.toml
