[tool.poetry]
name = "proj1"
version = "0.1.0"
description = ""
authors = ["Felix Qvist <felix.qvist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
proj2 = {path = "../proj2", extras = ["example"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
